fix: remove unnecessary horizontal overflow restriction and add seo

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -67,7 +67,6 @@
 
   html {
     scroll-padding-top: var(--fd-nav-height);
-    overflow-x: hidden;
   }
 
   .dark {
